# startup-reviver

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  README.md  VALIDATION_REPORT.md  api.py  contrary_research_format.md  deep_research.py  eslint.config.mjs  flow.md  homejoy-report.md  langgraph.json  main.py  package-lock.json  package.json  pnpm-lock.yaml  project-plan.md  prompts.py  pyproject.toml  spec_generation.py  spec_output.md  specs.md  test_homejoy.py  tools.py  ui-design-spec.md  yc_companies_formatted.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: contrary_research_format.md  deep_research.py  langgraph.json  prompts.py  tools.py
app/: globals.css  layout.tsx  page.tsx
app/api/_lib/: v0.ts
app/api/autodeploy/: route.ts
app/api/deployments/: route.ts
clients/: __init__.py
deployments/: deployments.json
docs/: autodeploy-api.md  livekit-outbound.md  resend-email.md
examples/: fetchr-report.md
lib/: email.ts  livekit.ts  markdown-parser.ts  meilisearch.ts  mock-company-details.ts  mock-data.ts  utils.ts
livekit/: 1.json  2.json  agent.py  requirements.txt
prompts/: architect-agent.md  company-page-layout.md  design-system.md  research-agent.md
reports/: .homejoy-old.md  atrium.md  drivingforce.md  fetchr-research-report.md  fetchr.md  homejoy.md
scripts/: __init__.py  hit-outbound-api.ts  moss_ingest.py  place-call.ts  send-test-email.ts  update-trunk.ts
vibehacker/: AGENTS.md  package.json  pnpm-lock.yaml
(+9 files in other folders)
